# chromatic-shear-sims

./: .gitignore  Containerfile  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
chromatic_shear_bias/: DC2_SED.py  DC2_stars.py  __init__.py  cosmoDC2.py  cosmoDC2_SED.py  dc2_sed_utils.py  lsst.py  pipeline.py  roman_rubin.py  run_utils.py  sagittarius.py  sed_tools.py  surveys.py
chromatic_shear_bias/generators/: __init__.py  gals.py  generators.py  stars.py
chromatic_shear_bias/pipeline/: README.md  aggregate.py  config.yaml  loader.py  logging_config.py  meas.py  pipeline.py  plot.py  prepare.py  quantiles.yaml  run.py  setup.sh  single.yaml
chromatic_shear_sims/: DC2_stars.py  blackbody.py  catalog.py  data.py  exponential.py  galaxies.py  images.py  loader.py  logging_config.py  lsst_sim.py  observations.py  phoenix_stars.py  pipeline.py  positions.py  psf.py  roman_rubin.py  run_utils.py  scene.py  stars.py  surveys.py  throughputs.py  utils.py
configs/: config.yaml  quantiles.yaml  single.yaml
example/: baseline.yaml  chromatic-diff_sed.yaml  chromatic-same_sed.yaml  chromatic.yaml  config.yaml  config_chromatic.yaml  dc2_sed.yaml  diff_sed.yaml  lattice.yaml  meas.sbatch  mixedscene.yaml  run.sbatch  same_sed.yaml  sim.yaml
notebooks/: psf_stars.ipynb  simulation.ipynb  throughputs.ipynb
perlmutter/: array-task.sh  setup.sh  submit-array.sh  submit.sh
scratch/pipeline/: config.yaml  loader.py  pipeline.py  run.py
shear_bias_sims/: image_lattice.py  run_utils.py
sherlock/: array-task.sh  config.pickle  setup.sh
src/chromatic_shear_sims/: darksky.py  data.py  galaxies.py  images.py  loader.py  logging_config.py  measurement.py  observations.py  positions.py  psf.py  run_utils.py  scene.py  simulation.py  stars.py  throughputs.py  utils.py
src/chromatic_shear_sims/data/: .gitattributes
src/chromatic_shear_sims/scripts/: aggregate.py  compute_colors.py  log_util.py  measure.py  name_util.py  plot.py  plot_drdc.py  plot_obs.py  plot_scene.py  plot_util.py  run.py
src/chromatic_shear_sims/tests/: diffsky-btsettl-achromatic.yaml  diffsky-simple-chromatic.yaml  diffsky_achromatic.yaml  diffsky_chromatic.yaml  simple-btsettl-chromatic.yaml  simple-simple-achromatic.yaml  simple_achromatic.yaml  simple_chromatic.yaml  test.py
tests/: diffsky-btsettl-chromatic.yaml  diffsky-simple-achromatic.yaml  simple-btsettl-achromatic.yaml  test.py
