[project]
name = "chromatic-shear-sims"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
description = ""
authors = [
    {name = "Sidney Mau", email = "sidneymau@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "chromatic_weak_lensing",
    "galsim",
    "matplotlib",
    "metadetect",
    "ngmix",
    "numpy",
    "pyarrow",
    "scipy",
    "pyyaml",
]


[project.scripts]
plot-scene-chromatic-shear-sim = "chromatic_shear_sims.scripts.plot_scene:main"
plot-obs-chromatic-shear-sim = "chromatic_shear_sims.scripts.plot_obs:main"
measure-chromatic-shear-sim = "chromatic_shear_sims.scripts.measure:main"
