[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"chromatic_shear_sims" = [
    "data/darksky.dat",
    "data/total_u.dat",
    "data/total_g.dat",
    "data/total_r.dat",
    "data/total_i.dat",
    "data/total_z.dat",
    "data/total_y.dat",
]

[project]
name = "chromatic-shear-sims"
license = {file = "LICENSE"}
readme = "README.md"
description = ""
authors = [
    {name = "Sidney Mau", email = "sidneymau@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "chromatic_weak_lensing[diffsky,roman-rubin,btsettl,lsst_sim] @ git+https://github.com/sidneymau/chromatic-weak-lensing.git",
    "galsim",
    "matplotlib",
    "metadetect",
    "ngmix",
    "numpy",
    "pyarrow",
    "pyyaml",
    "rich",
    "scipy",
]

[project.scripts]
plot-scene-chromatic-shear-sim = "chromatic_shear_sims.scripts.plot_scene:main"
plot-obs-chromatic-shear-sim = "chromatic_shear_sims.scripts.plot_obs:main"
run-chromatic-shear-sim = "chromatic_shear_sims.scripts.run:main"
aggregate-chromatic-shear-sim = "chromatic_shear_sims.scripts.aggregate:main"
measure-chromatic-shear-sim = "chromatic_shear_sims.scripts.measure:main"
